# Operator

./: CLAUDE.md  OPERATOR.md  components.json  index.html  package.json  vite.config.ts  vitest.config.ts
agents/: AGENTS.md  mcp-servers.json  skills.json
docs/: 00-index.md  01-system-design.md  02-ui-layout-screens.md  03-component-design.md  04-database-schema.md  05-api-design.md  06-git-operations.md  07-logging.md  08-react-packages.md  09-conductor-parity.md  10-settings.md  11-rendering-performance.md  12-dir-structure.md  13-vscode-themes.md
docs/references/: checkpointer.sh  git-busy-check.sh  (+2 more)
scripts/: fix_icon.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_add_automations.sql  0003_add_memory.sql  0004_add_git_log.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  ports.rs  watcher.rs
src-tauri/src/commands/: agent.rs  checkpoint.rs  file.rs  git.rs  hook.rs  mod.rs  settings.rs  shell.rs  skill.rs  terminal.rs  webview.rs  workspace.rs
src-tauri/src/config/: app_settings.rs  env_variables.rs  mod.rs  operator_json.rs
src-tauri/src/db/: checkpoint.rs  hook.rs  message.rs  mod.rs  repository.rs  schema.rs  skill.rs  todo.rs  variables.rs  workspace.rs
src-tauri/src/git/: checkpoint.rs  diff.rs  index.rs  mod.rs  worktree.rs
src-tauri/src/providers/: claudecode.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/pty/: manager.rs  mod.rs  reader.rs
(+96 files in other folders)
